# ADK_Agent

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: AGENT_INSTRUCTION.md  AGENT_INSTRUCTION_V2.md  AGENT_INSTRUCTION_V3.md  AGENT_INSTRUCTION_V4.md  AGENT_INSTRUCTION_V5.md  AGENT_INSTRUCTION_V6.md  AGENT_INSTRUCTION_V7.md  HYBRID_ARCHITECTURE.md
examples/: review_workflow.py
my_agent/: __init__.pyexit  agent.py
rules/: company_rules.md  company_rules_compact.md  security_rules.md  security_rules_compact.md
test_code_samples/: good_code.php  vulnerable_code.php
tools/: combined_analyzer.py  company_rules_checker.py  gemini_analyzer.py  security_scanner.py  semgrep_scanner.py  slack_notifier.py
